Add and localize settings/about translations; update UI
Added new translation strings for settings, resource path, personalization, and about pages in Translations.cs and localized them in German and French resource files. Updated SettingsPage.xaml, ResourcePathPage.xaml, and AboutPage.xaml to use direct German text instead of i18n bindings for UI labels and descriptions, and adjusted layout margins for improved appearance.

--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -1352,4 +1352,284 @@
     <value>Fehler beim Installieren des Updates</value>
     <comment>AvailableUpdateWindow error text</comment>
   </data>
+  
+  <!-- Settings Page Translations -->
+  <data name="Resource Path" xml:space="preserve">
+    <value>Ressourcen-Pfad</value>
+    <comment>Resource Path navigation card title</comment>
+  </data>
+  <data name="Loading all Paths." xml:space="preserve">
+    <value>Lade alle Pfade.</value>
+    <comment>Resource Path navigation card description</comment>
+  </data>
+  <data name="Personalization" xml:space="preserve">
+    <value>Personalisierung</value>
+    <comment>Personalization navigation card title</comment>
+  </data>
+  <data name="Change Design and other parts" xml:space="preserve">
+    <value>Design und andere Teile ändern</value>
+    <comment>Personalization navigation card description</comment>
+  </data>
+  <data name="About" xml:space="preserve">
+    <value>Über</value>
+    <comment>About navigation card title</comment>
+  </data>
+  <data name="Learn more about eTools Ultimate" xml:space="preserve">
+    <value>Erfahren Sie mehr über eTools Ultimate</value>
+    <comment>About navigation card description</comment>
+  </data>
+  
+  <!-- Resource Path Page Translations -->
+  <data name="Main Settings" xml:space="preserve">
+    <value>Haupteinstellungen</value>
+    <comment>Main Settings section header</comment>
+  </data>
+  <data name="Resource folder" xml:space="preserve">
+    <value>Ressourcen-Ordner</value>
+    <comment>Resource folder field label</comment>
+  </data>
+  <data name="Client folder" xml:space="preserve">
+    <value>Client-Ordner</value>
+    <comment>Client folder field label</comment>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>Version</value>
+    <comment>Version field label</comment>
+  </data>
+  <data name="Advanced settings" xml:space="preserve">
+    <value>Erweiterte Einstellungen</value>
+    <comment>Advanced settings button text</comment>
+  </data>
+  <data name="Custom" xml:space="preserve">
+    <value>Benutzerdefiniert</value>
+    <comment>Custom section header</comment>
+  </data>
+  <data name="Texture folder" xml:space="preserve">
+    <value>Textur-Ordner</value>
+    <comment>Texture folder field label</comment>
+  </data>
+  <data name="Icons folder" xml:space="preserve">
+    <value>Icon-Ordner</value>
+    <comment>Icons folder field label</comment>
+  </data>
+  <data name="Sounds folder" xml:space="preserve">
+    <value>Sound-Ordner</value>
+    <comment>Sounds folder field label</comment>
+  </data>
+  <data name="Sounds config file" xml:space="preserve">
+    <value>Sound-Konfigurationsdatei</value>
+    <comment>Sounds config file field label</comment>
+  </data>
+  <data name="Item" xml:space="preserve">
+    <value>Gegenstand</value>
+    <comment>Item section header</comment>
+  </data>
+  <data name="Spec_Item file" xml:space="preserve">
+    <value>Spec_Item-Datei</value>
+    <comment>Spec_Item file field label</comment>
+  </data>
+  <data name="PropItem.txt file" xml:space="preserve">
+    <value>PropItem.txt-Datei</value>
+    <comment>PropItem.txt file field label</comment>
+  </data>
+  <data name="Item folder" xml:space="preserve">
+    <value>Gegenstands-Ordner</value>
+    <comment>Item folder field label</comment>
+  </data>
+  <data name="Mover" xml:space="preserve">
+    <value>Beweger</value>
+    <comment>Mover section header</comment>
+  </data>
+  <data name="PropMover file" xml:space="preserve">
+    <value>PropMover-Datei</value>
+    <comment>PropMover file field label</comment>
+  </data>
+  <data name="PropMover.txt file" xml:space="preserve">
+    <value>PropMover.txt-Datei</value>
+    <comment>PropMover.txt file field label</comment>
+  </data>
+  <data name="PropMoverEx file" xml:space="preserve">
+    <value>PropMoverEx-Datei</value>
+    <comment>PropMoverEx file field label</comment>
+  </data>
+  <data name="Mover types configuration" xml:space="preserve">
+    <value>Beweger-Typen-Konfiguration</value>
+    <comment>Mover types configuration section header</comment>
+  </data>
+  <data name="Mover types" xml:space="preserve">
+    <value>Beweger-Typen</value>
+    <comment>Mover types list header</comment>
+  </data>
+  <data name="Assigned AI" xml:space="preserve">
+    <value>Zugewiesene KI</value>
+    <comment>Assigned AI list header</comment>
+  </data>
+  <data name="Skill" xml:space="preserve">
+    <value>Fähigkeit</value>
+    <comment>Skill section header</comment>
+  </data>
+  <data name="PropSkill file" xml:space="preserve">
+    <value>PropSkill-Datei</value>
+    <comment>PropSkill file field label</comment>
+  </data>
+  <data name="PropSkill.txt file" xml:space="preserve">
+    <value>PropSkill.txt-Datei</value>
+    <comment>PropSkill.txt file field label</comment>
+  </data>
+  <data name="Icon folder" xml:space="preserve">
+    <value>Icon-Ordner</value>
+    <comment>Icon folder field label</comment>
+  </data>
+  
+  <!-- Personalization Page Translations -->
+  <data name="App theme" xml:space="preserve">
+    <value>App-Design</value>
+    <comment>App theme section header</comment>
+  </data>
+  <data name="Select which app theme to display" xml:space="preserve">
+    <value>Wählen Sie das anzuzeigende App-Design</value>
+    <comment>App theme description</comment>
+  </data>
+  <data name="Application language" xml:space="preserve">
+    <value>Anwendungs-Sprache</value>
+    <comment>Application language section header</comment>
+  </data>
+  <data name="Choose your preferred language" xml:space="preserve">
+    <value>Wählen Sie Ihre bevorzugte Sprache</value>
+    <comment>Application language description</comment>
+  </data>
+  <data name="Light" xml:space="preserve">
+    <value>Hell</value>
+    <comment>Light theme option</comment>
+  </data>
+  <data name="Dark" xml:space="preserve">
+    <value>Dunkel</value>
+    <comment>Dark theme option</comment>
+  </data>
+  <data name="High Contrast" xml:space="preserve">
+    <value>Hoher Kontrast</value>
+    <comment>High Contrast theme option</comment>
+  </data>
+  <data name="English" xml:space="preserve">
+    <value>Englisch</value>
+    <comment>English language option</comment>
+  </data>
+  <data name="German" xml:space="preserve">
+    <value>Deutsch</value>
+    <comment>German language option</comment>
+  </data>
+  <data name="French" xml:space="preserve">
+    <value>Französisch</value>
+    <comment>French language option</comment>
+  </data>
+  <data name="Auto-save interval" xml:space="preserve">
+    <value>Auto-Speicher-Intervall</value>
+    <comment>Auto-save interval section header</comment>
+  </data>
+  <data name="Set the time interval for automatic saving" xml:space="preserve">
+    <value>Legen Sie das Zeitintervall für automatisches Speichern fest</value>
+    <comment>Auto-save interval description</comment>
+  </data>
+  <data name="5 minutes" xml:space="preserve">
+    <value>5 Minuten</value>
+    <comment>5 minutes option</comment>
+  </data>
+  <data name="15 minutes" xml:space="preserve">
+    <value>15 Minuten</value>
+    <comment>15 minutes option</comment>
+  </data>
+  <data name="30 minutes" xml:space="preserve">
+    <value>30 Minuten</value>
+    <comment>30 minutes option</comment>
+  </data>
+  <data name="Custom" xml:space="preserve">
+    <value>Benutzerdefiniert</value>
+    <comment>Custom option</comment>
+  </data>
+  <data name="min" xml:space="preserve">
+    <value>min</value>
+    <comment>Minutes abbreviation</comment>
+  </data>
+  
+  <!-- About Page Translations -->
+  <data name="About eTools Ultimate" xml:space="preserve">
+    <value>Über eTools Ultimate</value>
+    <comment>About eTools Ultimate section header</comment>
+  </data>
+  <data name="Our tool simplifies the editing process for developers." xml:space="preserve">
+    <value>Unser Tool vereinfacht den Bearbeitungsprozess für Entwickler.</value>
+    <comment>About description</comment>
+  </data>
+  <data name="Main Features" xml:space="preserve">
+    <value>Hauptfunktionen</value>
+    <comment>Main Features section header</comment>
+  </data>
+  <data name="Editing of .txt, .h and .inc files with structured interfaces" xml:space="preserve">
+    <value>Bearbeitung von .txt, .h und .inc Dateien mit strukturierten Benutzeroberflächen</value>
+    <comment>Main feature 1</comment>
+  </data>
+  <data name="Advanced categorization by element types" xml:space="preserve">
+    <value>Erweiterte Kategorisierung nach Elementtypen</value>
+    <comment>Main feature 2</comment>
+  </data>
+  <data name="Optimized for performance and user-friendliness" xml:space="preserve">
+    <value>Optimiert für Leistung und Benutzerfreundlichkeit</value>
+    <comment>Main feature 3</comment>
+  </data>
+  <data name="Development Team" xml:space="preserve">
+    <value>Entwicklungsteam</value>
+    <comment>Development Team section header</comment>
+  </data>
+  <data name="System Requirements" xml:space="preserve">
+    <value>Systemanforderungen</value>
+    <comment>System Requirements section header</comment>
+  </data>
+  <data name="Operating System:" xml:space="preserve">
+    <value>Betriebssystem:</value>
+    <comment>Operating System field label</comment>
+  </data>
+  <data name="Windows 10/11" xml:space="preserve">
+    <value>Windows 10/11</value>
+    <comment>Windows 10/11 option</comment>
+  </data>
+  <data name="Memory:" xml:space="preserve">
+    <value>Arbeitsspeicher:</value>
+    <comment>Memory field label</comment>
+  </data>
+  <data name="4 GB RAM minimum, 8 GB recommended" xml:space="preserve">
+    <value>4 GB RAM mindestens, 8 GB empfohlen</value>
+    <comment>Memory requirement</comment>
+  </data>
+  <data name="Disk Space:" xml:space="preserve">
+    <value>Festplattenspeicher:</value>
+    <comment>Disk Space field label</comment>
+  </data>
+  <data name="200 MB available space" xml:space="preserve">
+    <value>200 MB verfügbarer Speicherplatz</value>
+    <comment>Disk space requirement</comment>
+  </data>
+  <data name="Visit Website" xml:space="preserve">
+    <value>Website besuchen</value>
+    <comment>Visit Website button text</comment>
+  </data>
+  <data name="Check for Updates" xml:space="preserve">
+    <value>Nach Updates suchen</value>
+    <comment>Check for Updates button text</comment>
+  </data>
+  
+  <!-- Developer Names -->
+  <data name="Maqui" xml:space="preserve">
+    <value>Maqui</value>
+    <comment>Developer name</comment>
+  </data>
+  <data name="Kiyo" xml:space="preserve">
+    <value>Kiyo</value>
+    <comment>Developer name</comment>
+  </data>
+  
+  <!-- Technical Terms -->
+  <data name="64 Bit" xml:space="preserve">
+    <value>64 Bit</value>
+    <comment>64 Bit option</comment>
+  </data>
 </root>
